--- a/landing.html
+++ b/landing.html
@@ -233,7 +233,7 @@
             <div class="col-md-4"><a class="btn btn-outline-warning" href="#" id="b22">ASSC ITEMS</a></div>
             <div class="col-md-4"><a class="btn btn-outline-warning" href="#" id="b23">CARROTS ITEMS</a></div>
           </div>
-          <div id="highcharts-c5dfc70a-a4f7-4946-9541-665e0b5f3e23" style="display:none"></div>
+          <div id="highcharts-c5dfc70a-a4f7-4946-9541-665e0b5f3e23" style="display:none" style="width:100%"></div>
           <script>
             (function() {
               var files = ["https://code.highcharts.com/stock/highstock.js", "https://code.highcharts.com/highcharts-more.js", "https://code.highcharts.com/highcharts-3d.js", "https://code.highcharts.com/modules/data.js", "https://code.highcharts.com/modules/exporting.js", "https://code.highcharts.com/modules/funnel.js", "https://code.highcharts.com/modules/annotations.js", "https://code.highcharts.com/modules/solid-gauge.js"],
@@ -402,7 +402,7 @@
               }
             })();
           </script>
-          <div id="highcharts-12712cab-14eb-41a8-b6b0-c3b0efefde2a" style="display:none"></div>
+          <div id="highcharts-12712cab-14eb-41a8-b6b0-c3b0efefde2a" style="display:none" style="width:100%"></div>
           <script>
             (function() {
               var files = ["https://code.highcharts.com/stock/highstock.js", "https://code.highcharts.com/highcharts-more.js", "https://code.highcharts.com/highcharts-3d.js", "https://code.highcharts.com/modules/data.js", "https://code.highcharts.com/modules/exporting.js", "https://code.highcharts.com/modules/funnel.js", "https://code.highcharts.com/modules/annotations.js", "https://code.highcharts.com/modules/solid-gauge.js"],
@@ -571,7 +571,7 @@
               }
             })();
           </script>
-          <div id="highcharts-495b91f4-21b4-4fd7-9698-9d844df97df8" style="display:none"></div>
+          <div id="highcharts-495b91f4-21b4-4fd7-9698-9d844df97df8"  style="display:none" style="width:100%"></div>
           <script>
             (function() {
               var files = ["https://code.highcharts.com/stock/highstock.js", "https://code.highcharts.com/highcharts-more.js", "https://code.highcharts.com/highcharts-3d.js", "https://code.highcharts.com/modules/data.js", "https://code.highcharts.com/modules/exporting.js", "https://code.highcharts.com/modules/funnel.js", "https://code.highcharts.com/modules/annotations.js", "https://code.highcharts.com/modules/solid-gauge.js"],
@@ -690,7 +690,7 @@
                       "_symbolIndex": 0,
                       "marker": {}
                     }, {
-                      "name": "Price_spread copy",
+                      "name": "Price Spread",
                       "turboThreshold": 0,
                       "_colorIndex": 1,
                       "_symbolIndex": 1
@@ -703,7 +703,7 @@
                       "downloadSVG": "Download SVG vector image"
                     },
                     "data": {
-                      "csv": "\"name\";\"price copy\";\"Price_spread copy\"\n\"NOUVEAU LOGO TEE-overlab\";1190;363\n\"NOUVEAU LOGO TEE-popcorn\";1398;571\n\"NOUVEAU LOGO TEE-ep\";1499;672\n\"PRINTED ARC S/S TOP-overlab\";1190;363\n\"PRINTED ARC S/S TOP-popcorn\";1298;471\n\"PRINTED ARC S/S TOP-ep\";1399;572\n\"REMEMBER TEE -WHITE-overlab\";750;-77\n\"REMEMBER TEE -WHITE-popcorn\";798;-29\n\"REMEMBER TEE -WHITE-ep\";899;72\n\"PAYPHONE TEE-overlab\";690;-137\n\"PAYPHONE TEE-popcorn\";798;-29\n\"PAYPHONE TEE-ep\";899;72\n\"SYSTEM TEE-overlab\";690;-137\n\"SYSTEM TEE-popcorn\";798;-29\n\"ETERNAL TEE-overlab\";690;-137\n\"ETERNAL TEE-popcorn\";798;-29\n\"ETERNAL TEE-ep\";899;72\n\"Chris Cunningham Rubber Johnny Tee-overlab\";690;-137\n\"SUPREME X CDG split Box Logo Tee Black-ep\";6500;5673\n\"SUPREME X CDG split Box Logo Tee Black-popcorn\";4800;3973\n\"HQ Stripe S/S Top-overlab\";1399;572\n\"Casino Rayon Shirt-overlab\";1390;563\n\"Casino Rayon Shirt-ep\";1860;1033\n\"Dream Tee Black-ep\";999;172",
+                      "csv": "\"name\";\"price copy\";\"Price Spread\"\n\"NOUVEAU LOGO TEE-overlab\";1190;363\n\"NOUVEAU LOGO TEE-popcorn\";1398;571\n\"NOUVEAU LOGO TEE-ep\";1499;672\n\"PRINTED ARC S/S TOP-overlab\";1190;363\n\"PRINTED ARC S/S TOP-popcorn\";1298;471\n\"PRINTED ARC S/S TOP-ep\";1399;572\n\"REMEMBER TEE -WHITE-overlab\";750;-77\n\"REMEMBER TEE -WHITE-popcorn\";798;-29\n\"REMEMBER TEE -WHITE-ep\";899;72\n\"PAYPHONE TEE-overlab\";690;-137\n\"PAYPHONE TEE-popcorn\";798;-29\n\"PAYPHONE TEE-ep\";899;72\n\"SYSTEM TEE-overlab\";690;-137\n\"SYSTEM TEE-popcorn\";798;-29\n\"ETERNAL TEE-overlab\";690;-137\n\"ETERNAL TEE-popcorn\";798;-29\n\"ETERNAL TEE-ep\";899;72\n\"Chris Cunningham Rubber Johnny Tee-overlab\";690;-137\n\"SUPREME X CDG split Box Logo Tee Black-ep\";6500;5673\n\"SUPREME X CDG split Box Logo Tee Black-popcorn\";4800;3973\n\"HQ Stripe S/S Top-overlab\";1399;572\n\"Casino Rayon Shirt-overlab\";1390;563\n\"Casino Rayon Shirt-ep\";1860;1033\n\"Dream Tee Black-ep\";999;172",
                       "googleSpreadsheetKey": false,
                       "googleSpreadsheetWorksheet": false
                     },
