--- a/stores.html
+++ b/stores.html
@@ -129,7 +129,7 @@
           <br>
           <button id="B3" type="button" class="btn btn-success">View as list</button>
           <button id="B1" type="button" class="btn btn-danger">numbers of items</button>
-          <button id="B5" type="button" class="btn btn-info">average selling price</button>
+          <button id="B5" type="button" class="btn btn-info">average price spread</button>
           <br>
           <br>
           <iframe id="airtable-embed3" src="https://airtable.com/embed/shrAWgjsh91KY6rVM?backgroundColor=gray&amp;viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
