--- a/landing.html
+++ b/landing.html
@@ -229,11 +229,12 @@
             <table id="example5" style="width:100%" class="table table-bordered"></table>
           </div>
           <div class="row">
-            <div class="col-md-4"><a class="btn btn-outline-warning" href="#" id="b21">SUPREME ITEMS</a></div>
-            <div class="col-md-4"><a class="btn btn-outline-warning" href="#" id="b22">ASSC ITEMS</a></div>
-            <div class="col-md-4"><a class="btn btn-outline-warning" href="#" id="b23">CARROTS ITEMS</a></div>
+            <div class="col-md-3"><a class="btn btn-outline-warning" href="#" id="b21">SUPREME ITEMS</a></div>
+            <div class="col-md-3"><a class="btn btn-outline-warning" href="#" id="b22">ASSC ITEMS</a></div>
+            <div class="col-md-3"><a class="btn btn-outline-warning" href="#" id="b23">CARROTS ITEMS</a></div>
+            <div class="col-md-3"><a class="btn btn-outline-warning" href="#" id="b24">RIPNDIP ITEMS</a></div>
           </div>
-          <div id="highcharts-c5dfc70a-a4f7-4946-9541-665e0b5f3e23" style="display:none" style="width:100%"></div>
+          <div id="highcharts-c5dfc70a-a4f7-4946-9541-665e0b5f3e23" style="display:none"></div>
           <script>
             (function() {
               var files = ["https://code.highcharts.com/stock/highstock.js", "https://code.highcharts.com/highcharts-more.js", "https://code.highcharts.com/highcharts-3d.js", "https://code.highcharts.com/modules/data.js", "https://code.highcharts.com/modules/exporting.js", "https://code.highcharts.com/modules/funnel.js", "https://code.highcharts.com/modules/annotations.js", "https://code.highcharts.com/modules/solid-gauge.js"],
@@ -346,7 +347,7 @@
                       }
                     },
                     "series": [{
-                      "name": "price copy",
+                      "name": "Price",
                       "turboThreshold": 0,
                       "_colorIndex": 0
                     }, {
@@ -371,7 +372,7 @@
                       "labels": {}
                     }],
                     "data": {
-                      "csv": "\"name\";\"price copy\";\"Price Spread\"\n\"GUCCUO WORDMARK T-SHIRT-popcorn\";398;22\n\"GUCCUO WORDMARK T-SHIRT-juice\";420;44\n\"COLLEGIATE TEE-popcorn\";398;22\n\"COLLEGIATE TEE-juice\";420;44\n\"BETA-CAROTENE T-SHIRT-popcorn\";398;22\n\"BETA-CAROTENE T-SHIRT-juice\";420;44\n\"ALL OVER CARROTS T-SHIRT-popcorn\";398;22\n\"ALL OVER CARROTS T-SHIRT-juice\";420;44",
+                      "csv": "\"name\";\"Price\";\"Price Spread\"\n\"GUCCUO WORDMARK T-SHIRT-popcorn\";398;22\n\"GUCCUO WORDMARK T-SHIRT-juice\";420;44\n\"COLLEGIATE TEE-popcorn\";398;22\n\"COLLEGIATE TEE-juice\";420;44\n\"BETA-CAROTENE T-SHIRT-popcorn\";398;22\n\"BETA-CAROTENE T-SHIRT-juice\";420;44\n\"ALL OVER CARROTS T-SHIRT-popcorn\";398;22\n\"ALL OVER CARROTS T-SHIRT-juice\";420;44",
                       "googleSpreadsheetKey": false,
                       "googleSpreadsheetWorksheet": false
                     }
@@ -402,7 +403,7 @@
               }
             })();
           </script>
-          <div id="highcharts-12712cab-14eb-41a8-b6b0-c3b0efefde2a" style="display:none" style="width:100%"></div>
+          <div id="highcharts-12712cab-14eb-41a8-b6b0-c3b0efefde2a" style="display:none"></div>
           <script>
             (function() {
               var files = ["https://code.highcharts.com/stock/highstock.js", "https://code.highcharts.com/highcharts-more.js", "https://code.highcharts.com/highcharts-3d.js", "https://code.highcharts.com/modules/data.js", "https://code.highcharts.com/modules/exporting.js", "https://code.highcharts.com/modules/funnel.js", "https://code.highcharts.com/modules/annotations.js", "https://code.highcharts.com/modules/solid-gauge.js"],
@@ -515,7 +516,7 @@
                       }
                     },
                     "series": [{
-                      "name": "price copy",
+                      "name": "Price",
                       "turboThreshold": 0,
                       "_colorIndex": 0
                     }, {
@@ -540,7 +541,7 @@
                       "labels": {}
                     }],
                     "data": {
-                      "csv": "\"name\";\"price copy\";\"Price Spread\"\n\" BOX LOGO-popcorn\";548;310\n\"JUST 4 FUN-popcorn\";548;310\n\"BAISC LOGO TEE-popcorn\";548;310\n\" BAISC LOGO TEE-overlab\";480;242\n\" SURFS UP TEE-popcorn\";548;310\n\" SURFS UP TEE-overlab\";480;242\n\" BLOCKED TEE-popcorn\";548;310\n\" BLOCKED TEE-overlab\";680;442\n\"BLOCKED FLANNEL WHITE-popcorn\";1398;707\n\" BLOCKED FLANNEL WHITE-overlab\";899;208\n\" BLOCKED BLACK HOODY-popcorn\";1098;559\n\" BLOCKED BLACK HOODY-overlab\";799;260\n\" KKOCH TEE-popcorn\";548;310\n\" KKOCH TEE-overlab\";348;110",
+                      "csv": "\"name\";\"Price\";\"Price Spread\"\n\" BOX LOGO-popcorn\";548;310\n\"JUST 4 FUN-popcorn\";548;310\n\"BAISC LOGO TEE-popcorn\";548;310\n\" BAISC LOGO TEE-overlab\";480;242\n\" SURFS UP TEE-popcorn\";548;310\n\" SURFS UP TEE-overlab\";480;242\n\" BLOCKED TEE-popcorn\";548;310\n\" BLOCKED TEE-overlab\";680;442\n\"BLOCKED FLANNEL WHITE-popcorn\";1398;707\n\" BLOCKED FLANNEL WHITE-overlab\";899;208\n\" BLOCKED BLACK HOODY-popcorn\";1098;559\n\" BLOCKED BLACK HOODY-overlab\";799;260\n\" KKOCH TEE-popcorn\";548;310\n\" KKOCH TEE-overlab\";348;110",
                       "googleSpreadsheetKey": false,
                       "googleSpreadsheetWorksheet": false
                     }
@@ -571,7 +572,7 @@
               }
             })();
           </script>
-          <div id="highcharts-495b91f4-21b4-4fd7-9698-9d844df97df8"  style="display:none" style="width:100%"></div>
+          <div id="highcharts-495b91f4-21b4-4fd7-9698-9d844df97df8" style="display:none"></div>
           <script>
             (function() {
               var files = ["https://code.highcharts.com/stock/highstock.js", "https://code.highcharts.com/highcharts-more.js", "https://code.highcharts.com/highcharts-3d.js", "https://code.highcharts.com/modules/data.js", "https://code.highcharts.com/modules/exporting.js", "https://code.highcharts.com/modules/funnel.js", "https://code.highcharts.com/modules/annotations.js", "https://code.highcharts.com/modules/solid-gauge.js"],
@@ -684,7 +685,7 @@
                       }
                     },
                     "series": [{
-                      "name": "price copy",
+                      "name": "Price",
                       "turboThreshold": 0,
                       "_colorIndex": 0,
                       "_symbolIndex": 0,
@@ -703,7 +704,7 @@
                       "downloadSVG": "Download SVG vector image"
                     },
                     "data": {
-                      "csv": "\"name\";\"price copy\";\"Price Spread\"\n\"NOUVEAU LOGO TEE-overlab\";1190;363\n\"NOUVEAU LOGO TEE-popcorn\";1398;571\n\"NOUVEAU LOGO TEE-ep\";1499;672\n\"PRINTED ARC S/S TOP-overlab\";1190;363\n\"PRINTED ARC S/S TOP-popcorn\";1298;471\n\"PRINTED ARC S/S TOP-ep\";1399;572\n\"REMEMBER TEE -WHITE-overlab\";750;-77\n\"REMEMBER TEE -WHITE-popcorn\";798;-29\n\"REMEMBER TEE -WHITE-ep\";899;72\n\"PAYPHONE TEE-overlab\";690;-137\n\"PAYPHONE TEE-popcorn\";798;-29\n\"PAYPHONE TEE-ep\";899;72\n\"SYSTEM TEE-overlab\";690;-137\n\"SYSTEM TEE-popcorn\";798;-29\n\"ETERNAL TEE-overlab\";690;-137\n\"ETERNAL TEE-popcorn\";798;-29\n\"ETERNAL TEE-ep\";899;72\n\"Chris Cunningham Rubber Johnny Tee-overlab\";690;-137\n\"SUPREME X CDG split Box Logo Tee Black-ep\";6500;5673\n\"SUPREME X CDG split Box Logo Tee Black-popcorn\";4800;3973\n\"HQ Stripe S/S Top-overlab\";1399;572\n\"Casino Rayon Shirt-overlab\";1390;563\n\"Casino Rayon Shirt-ep\";1860;1033\n\"Dream Tee Black-ep\";999;172",
+                      "csv": "\"name\";\"Price\";\"Price Spread\"\n\"NOUVEAU LOGO TEE-overlab\";1190;363\n\"NOUVEAU LOGO TEE-popcorn\";1398;571\n\"NOUVEAU LOGO TEE-ep\";1499;672\n\"PRINTED ARC S/S TOP-overlab\";1190;363\n\"PRINTED ARC S/S TOP-popcorn\";1298;471\n\"PRINTED ARC S/S TOP-ep\";1399;572\n\"REMEMBER TEE -WHITE-overlab\";750;-77\n\"REMEMBER TEE -WHITE-popcorn\";798;-29\n\"REMEMBER TEE -WHITE-ep\";899;72\n\"PAYPHONE TEE-overlab\";690;-137\n\"PAYPHONE TEE-popcorn\";798;-29\n\"PAYPHONE TEE-ep\";899;72\n\"SYSTEM TEE-overlab\";690;-137\n\"SYSTEM TEE-popcorn\";798;-29\n\"ETERNAL TEE-overlab\";690;-137\n\"ETERNAL TEE-popcorn\";798;-29\n\"ETERNAL TEE-ep\";899;72\n\"Chris Cunningham Rubber Johnny Tee-overlab\";690;-137\n\"SUPREME X CDG split Box Logo Tee Black-ep\";6500;5673\n\"SUPREME X CDG split Box Logo Tee Black-popcorn\";4800;3973\n\"HQ Stripe S/S Top-overlab\";1399;572\n\"Casino Rayon Shirt-overlab\";1390;563\n\"Casino Rayon Shirt-ep\";1860;1033\n\"Dream Tee Black-ep\";999;172",
                       "googleSpreadsheetKey": false,
                       "googleSpreadsheetWorksheet": false
                     },
@@ -739,6 +740,175 @@
                     });
                     */
                   new Highcharts.Chart("highcharts-495b91f4-21b4-4fd7-9698-9d844df97df8", options);
+                }
+              }
+            })();
+          </script>
+          <div id="highcharts-bdd9fff8-aec3-439a-aecc-37b0feb51050" style="display:none"></div>
+          <script>
+            (function() {
+              var files = ["https://code.highcharts.com/stock/highstock.js", "https://code.highcharts.com/highcharts-more.js", "https://code.highcharts.com/highcharts-3d.js", "https://code.highcharts.com/modules/data.js", "https://code.highcharts.com/modules/exporting.js", "https://code.highcharts.com/modules/funnel.js", "https://code.highcharts.com/modules/annotations.js", "https://code.highcharts.com/modules/solid-gauge.js"],
+                loaded = 0;
+              if (typeof window["HighchartsEditor"] === "undefined") {
+                window.HighchartsEditor = {
+                  ondone: [cl],
+                  hasWrapped: false,
+                  hasLoaded: false
+                };
+                include(files[0]);
+              } else {
+                if (window.HighchartsEditor.hasLoaded) {
+                  cl();
+                } else {
+                  window.HighchartsEditor.ondone.push(cl);
+                }
+              }
+
+              function isScriptAlreadyIncluded(src) {
+                var scripts = document.getElementsByTagName("script");
+                for (var i = 0; i < scripts.length; i++) {
+                  if (scripts[i].hasAttribute("src")) {
+                    if ((scripts[i].getAttribute("src") || "").indexOf(src) >= 0 || (scripts[i].getAttribute("src") === "http://code.highcharts.com/highcharts.js" && src === "https://code.highcharts.com/stock/highstock.js")) {
+                      return true;
+                    }
+                  }
+                }
+                return false;
+              }
+
+              function check() {
+                if (loaded === files.length) {
+                  for (var i = 0; i < window.HighchartsEditor.ondone.length; i++) {
+                    try {
+                      window.HighchartsEditor.ondone[i]();
+                    } catch (e) {
+                      console.error(e);
+                    }
+                  }
+                  window.HighchartsEditor.hasLoaded = true;
+                }
+              }
+
+              function include(script) {
+                function next() {
+                  ++loaded;
+                  if (loaded < files.length) {
+                    include(files[loaded]);
+                  }
+                  check();
+                }
+                if (isScriptAlreadyIncluded(script)) {
+                  return next();
+                }
+                var sc = document.createElement("script");
+                sc.src = script;
+                sc.type = "text/javascript";
+                sc.onload = function() {
+                  next();
+                };
+                document.head.appendChild(sc);
+              }
+
+              function each(a, fn) {
+                if (typeof a.forEach !== "undefined") {
+                  a.forEach(fn);
+                } else {
+                  for (var i = 0; i < a.length; i++) {
+                    if (fn) {
+                      fn(a[i]);
+                    }
+                  }
+                }
+              }
+              var inc = {},
+                incl = [];
+              each(document.querySelectorAll("script"), function(t) {
+                inc[t.src.substr(0, t.src.indexOf("?"))] = 1;
+              });
+
+              function cl() {
+                if (typeof window["Highcharts"] !== "undefined") {
+                  Highcharts.setOptions({
+                    lang: {
+                      "downloadJPEG": "Download JPEG image",
+                      "downloadPDF": "Download PDF document",
+                      "downloadSVG": "Download SVG vector image"
+                    }
+                  });
+                  var options = {
+                    "title": {
+                      "text": "RIPNDIP ITEMS"
+                    },
+                    "subtitle": {
+                      "text": "Find your most valuable and affordable items"
+                    },
+                    "exporting": {},
+                    "chart": {
+                      "type": "column",
+                      "inverted": true,
+                      "polar": false,
+                      "width": null
+                    },
+                    "plotOptions": {
+                      "series": {
+                        "stacking": "percent",
+                        "animation": false,
+                        "dataLabels": {}
+                      }
+                    },
+                    "series": [{
+                      "name": "Price",
+                      "turboThreshold": 0,
+                      "_colorIndex": 0
+                    }, {
+                      "name": "Price Spread",
+                      "turboThreshold": 0,
+                      "_colorIndex": 1
+                    }],
+                    "legend": {},
+                    "tooltip": {},
+                    "lang": {
+                      "downloadJPEG": "Download JPEG image",
+                      "downloadPDF": "Download PDF document",
+                      "downloadSVG": "Download SVG vector image"
+                    },
+                    "xAxis": [{
+                      "title": {},
+                      "labels": {},
+                      "type": "category"
+                    }],
+                    "yAxis": [{
+                      "title": {},
+                      "labels": {}
+                    }],
+                    "data": {
+                      "csv": "\"name\";\"Price\";\"Price Spread\"\n\" LORD NERMAL SOCKS-popcorn\";149;55\n\"PILL SOCKS-juice\";120;26\n\" LORD NERMAL SOCKS-overlab\";130;36\n\"NERMAMANIAC TEE -overlab\";340;74\n\"NERMAMANIAC TEE -juice\";290;24\n\"NERMAMANIAC TEE -popcorn\";348;82\n\"NERM OF THE YEAR-overlab\";320;54\n\"NERM OF THE YEAR-juice\";370;104\n\"NERM OF THE YEAR-popcorn\";348;82\n\"CREATION TEE-overlab\";320;54\n\"CREATION TEE-juice\";370;104\n\"CREATION TEE-popcorn\";328;62\n\"CHARGED UP TEE-overlab\";320;54\n\"CHARGED UP TEE-juice\";370;104\n\"CHARGED UP TEE-popcorn\";328;62",
+                      "googleSpreadsheetKey": false,
+                      "googleSpreadsheetWorksheet": false
+                    }
+                  };
+                  /*
+                  // Sample of extending options:
+                  Highcharts.merge(true, options, {
+                      chart: {
+                          backgroundColor: "#bada55"
+                      },
+                      plotOptions: {
+                          series: {
+                              cursor: "pointer",
+                              events: {
+                                  click: function(event) {
+                                      alert(this.name + " clicked\n" +
+                                            "Alt: " + event.altKey + "\n" +
+                                            "Control: " + event.ctrlKey + "\n" +
+                                            "Shift: " + event.shiftKey + "\n");
+                                  }
+                              }
+                          }
+                      }
+                  });
+                  */
+                  new Highcharts.Chart("highcharts-bdd9fff8-aec3-439a-aecc-37b0feb51050", options);
                 }
               }
             })();
@@ -805,6 +975,11 @@
     $(document).ready(function() {
       $('#b23').on('click', function() {
         $('#highcharts-c5dfc70a-a4f7-4946-9541-665e0b5f3e23').toggle();
+      });
+    });
+    $(document).ready(function() {
+      $('#b24').on('click', function() {
+        $('#highcharts-bdd9fff8-aec3-439a-aecc-37b0feb51050').toggle();
       });
     });
   </script>
