--- a/brand07.html
+++ b/brand07.html
@@ -64,81 +64,37 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <iframe src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1BW5HJDN8oM7gLM3wlAdRFuPyUfKhxmwbKAMRtn3iN-M&amp;font=Default&amp;lang=en&amp;initial_zoom=2&amp;height=650" width="100%" height="650" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0"></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
           <h1 class="mb-3 justify-content-center"><b>Latest News</b></h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 p-4">
-          <a href="brand01.html"> <h4> <b>Every Supreme Skate Deck &amp; Accessory Ever Made Showcased in New Exhibition</b>  </h4></a>
-          <p>“Inferno” centers around two massive collections.</p>
-          <p>Sep 12, 2018 / By Nicolaus Li</p>
-        </div>
-        <div class="col-md-6 p-4">
-          <a href="brand02.html"> <h4> <b>Koreatown Run Club Taps PLEASURES, Chinatown Market &amp; Carrots to Capture the Energy of LA</b> </h4></a>
-          <p>Building a new sense of community.</p>
-          <p>Nov 28, 2018 / By Jake Silbert</p>
-        </div>
-        <div class="col-md-6 p-4">
-          <a href="brand03.html"> <h4> <b>Champion &amp; London Youth Reveal New Charity Capsule</b> </h4></a>
-          <p>Celebrating young Londoners.</p>
-          <p>Nov 26, 2018 / By Jack Stanley</p>
-        </div>
-        <div class="col-md-6 p-4">
-          <a href="brand04.html"> <h4> <b>Anti Social Social Club Joins Honda for Ricer-Friendly Collaboration</b> </h4></a>
-          <p>No VTEC logos to be found, however.</p>
-          <p>Nov 2, 2018 / By Jake Silbert</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 p-4">
-          <a href="brand05.html"> <h4> <b>Palace x Polo Ralph Lauren's London Drop Had Fans Excited for Skate Decks &amp; Teddy Bears</b> </h4></a>
-          <p>The unexpected collaboration finally hits stores.</p>
-          <p>Nov 9, 2018 / By Jack Stanley</p>
-        </div>
-        <div class="col-md-6 p-4">
-          <a href="brand06.html"> <h4> <b>Uhh! LRG &amp; Master P Hook-Up for a No Limit Records Capsule</b> </h4></a>
-          <p>“If you’re sellin’ that ice cream, you gots to make sure it’s good.”</p>
-          <p>14 Hrs ago / Presented by LRG</p>
-        </div>
-        <div class="col-md-6 p-4">
-          <a href="brand07.html"> <h4> <b>Take a First Look at Martine Rose's Nike Collaboration</b> </h4></a>
+          <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"> </li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"> </li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"> </li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="img/BRAND/7-1.jpg">
+              </div>
+              <div class="carousel-item "> <img class="d-block img-fluid w-100" src="img/BRAND/7-2.png">
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/BRAND/7-3.png">
+              </div>
+            </div>
+          </div>
+          <h4>Take a First Look at Martine Rose's Nike Collaboration</h4>
           <p>Dropping on Craigslist.</p>
           <p>16 Hrs ago / By Enrique Menendez</p>
         </div>
         <div class="col-md-6 p-4">
-          <a href="brand08.html"> <h4> <b>The North Face, visvim, Cav Empt &amp; More Appear on HAVEN's FW18 Editorial</b> </h4></a>
-          <p>Alongside Kapital, Mountain Research and more.</p>
-          <p>Nov 30, 2018 / By Felson Sajonas</p>
+          <p>Earlier this year, Nike confirmed that Martine Rose, Yoon and Sarah Andelman would be joining the sportswear giant for a trio of collaborative releases.&nbsp;<br><br>The partnerships signal an important move for Nike, who until now has mostly collaborated with male designers. Now, more details on Martine Rose’s collaboration have surfaced, confirming speculation that Rose would offer he own interpretation of the Nike Monarch.&nbsp;<br><br>“We took a silhouette based on a very British tracksuit that you might get in JD Sports,” Rose told Vogue. “Then, we created a trainer inspired by Nike’s Monarch style, which is a very middle-America-dad trainer,” she added.&nbsp;<br><br>Vogue also revealed part of the collaboration would be available to buy on Craigslist. Three different Martine Rose supporters – London Steve, photographer Surya, and sneaker-head Tesfa – will act as London-based stockists.</p>
         </div>
       </div>
     </div>
   </div>
   <header class="masthead" style="background-image: url('img/items-bg.jpg')"></header>
-  <div class="text-center my-0 py-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12" style="">
-          <div class="row"></div><button id="B4" type="button" class="btn btn-success" contenteditable="true"><b>Average Selling Price</b></button>
-          <br>
-          <br>
-          <div class="table-responsive">
-            <table id="example3" style="width:50%" class="table table-bordered"></table>
-          </div>
-          <div id="chart">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="bg-info p-0">
     <div class="container">
       <div class="row">
