--- a/brand02.html
+++ b/brand02.html
@@ -64,81 +64,37 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <iframe src="https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=1BW5HJDN8oM7gLM3wlAdRFuPyUfKhxmwbKAMRtn3iN-M&amp;font=Default&amp;lang=en&amp;initial_zoom=2&amp;height=650" width="100%" height="650" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" frameborder="0"></iframe>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
           <h1 class="mb-3 justify-content-center"><b>Latest News</b></h1>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 p-4">
-          <a href="brand01.html"> <h4> <b>Every Supreme Skate Deck &amp; Accessory Ever Made Showcased in New Exhibition</b>  </h4></a>
-          <p>“Inferno” centers around two massive collections.</p>
-          <p>Sep 12, 2018 / By Nicolaus Li</p>
-        </div>
-        <div class="col-md-6 p-4">
-          <a href="brand02.html"> <h4> <b>Koreatown Run Club Taps PLEASURES, Chinatown Market &amp; Carrots to Capture the Energy of LA</b> </h4></a>
-          <p>Building a new sense of community.</p>
+          <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"> </li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"> </li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"> </li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active"> <img class="d-block img-fluid w-100" src="img/BRAND/2-1.png">
+              </div>
+              <div class="carousel-item "> <img class="d-block img-fluid w-100" src="img/BRAND/2-2.png">
+              </div>
+              <div class="carousel-item"> <img class="d-block img-fluid w-100" src="img/BRAND/2-3.png">
+              </div>
+            </div>
+          </div>
+          <h4>Koreatown Run Club Taps PLEASURES, Chinatown Market &amp; Carrots to Capture the Energy of LA</h4>
+          <p contenteditable="true">Building a new sense of community.</p>
           <p>Nov 28, 2018 / By Jake Silbert</p>
         </div>
         <div class="col-md-6 p-4">
-          <a href="brand03.html"> <h4> <b>Champion &amp; London Youth Reveal New Charity Capsule</b> </h4></a>
-          <p>Celebrating young Londoners.</p>
-          <p>Nov 26, 2018 / By Jack Stanley</p>
-        </div>
-        <div class="col-md-6 p-4">
-          <a href="brand04.html"> <h4> <b>Anti Social Social Club Joins Honda for Ricer-Friendly Collaboration</b> </h4></a>
-          <p>No VTEC logos to be found, however.</p>
-          <p>Nov 2, 2018 / By Jake Silbert</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 p-4">
-          <a href="brand05.html"> <h4> <b>Palace x Polo Ralph Lauren's London Drop Had Fans Excited for Skate Decks &amp; Teddy Bears</b> </h4></a>
-          <p>The unexpected collaboration finally hits stores.</p>
-          <p>Nov 9, 2018 / By Jack Stanley</p>
-        </div>
-        <div class="col-md-6 p-4">
-          <a href="brand06.html"> <h4> <b>Uhh! LRG &amp; Master P Hook-Up for a No Limit Records Capsule</b> </h4></a>
-          <p>“If you’re sellin’ that ice cream, you gots to make sure it’s good.”</p>
-          <p>14 Hrs ago / Presented by LRG</p>
-        </div>
-        <div class="col-md-6 p-4">
-          <a href="brand07.html"> <h4> <b>Take a First Look at Martine Rose's Nike Collaboration</b> </h4></a>
-          <p>Dropping on Craigslist.</p>
-          <p>16 Hrs ago / By Enrique Menendez</p>
-        </div>
-        <div class="col-md-6 p-4">
-          <a href="brand08.html"> <h4> <b>The North Face, visvim, Cav Empt &amp; More Appear on HAVEN's FW18 Editorial</b> </h4></a>
-          <p>Alongside Kapital, Mountain Research and more.</p>
-          <p>Nov 30, 2018 / By Felson Sajonas</p>
+          <p>Starting as a simple group of friends that enjoyed running together, Koreatown Run Club has quickly become a community rooted in Los Angeles’ streetwear, music and art scenes.&nbsp;<br><br>Most recently K/RC tapped PLEASURES, Chinatown Market and Carrots for a capsule that captures the unique energy of LA. Comprised of five pieces, the special range embodies each fledgling label’s expression of running and the club’s relation to the method of terrestrial locomotion.&nbsp;<br><br>Notably, PLEASURES put together two designs that symbolize running in more of an abstract relation to bodily function and the anatomy. Check out the capsule above and look for the special range to be available on koreatownrunclub.com come September 13.</p>
         </div>
       </div>
     </div>
   </div>
   <header class="masthead" style="background-image: url('img/items-bg.jpg')"></header>
-  <div class="text-center my-0 py-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12" style="">
-          <div class="row"></div><button id="B4" type="button" class="btn btn-success" contenteditable="true"><b>Average Selling Price</b></button>
-          <br>
-          <br>
-          <div class="table-responsive">
-            <table id="example3" style="width:50%" class="table table-bordered"></table>
-          </div>
-          <div id="chart">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="bg-info p-0">
     <div class="container">
       <div class="row">
