--- a/landing.html
+++ b/landing.html
@@ -9,6 +9,7 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-566NHGN');</script>
   <!-- End Google Tag Manager -->
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-129094912-1"></script>
   <script> window.dataLayer = window.dataLayer || [];
@@ -32,9 +33,10 @@
 
 <body class="">
   <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-566NHGN" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-566NHGN"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
-  <nav class="navbar navbar-expand-md navbar-light bg-warning">
+    <nav class="navbar navbar-expand-md navbar-light bg-warning">
     <div class="container">
       <a class="navbar-brand" href="#"><i class="fa d-inline fa-lg fa-bullseye"></i></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbar2SupportedContent" aria-controls="navbar2SupportedContent" aria-expanded="false" aria-label="Toggle navigation">
