--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="col-md-4 p-4"> <i class="d-block fa fa-3x mb-2 text-muted fa-hand-peace-o"></i>
           <h4 class="bg-warning"> <b>Hottest Items</b></h4>
           <p>We collect all the hottest items from different famous stores in HK. And we have also compared the prices of the same item in different stores, so that you can know where to buy your favorite clothes for less money.</p>
-          <a class="btn btn-outline-dark" href="landing.html">CHECK THE ITEMS</a>
+          <a id=tagitems class="btn btn-outline-dark" href="landing.html">CHECK THE ITEMS</a>
         </div>
         <div class="col-md-4 col-6 p-4"> <i class="d-block fa fa-stop-circle-o fa-3x mb-2 text-muted"></i>
           <h4 class="bg-warning"> <b>Brands</b></h4>
