--- a/landing.html
+++ b/landing.html
@@ -217,8 +217,8 @@
         <div class="col-md-12">
           <h1 class="mb-3">Find your favorable items with the most worthy price!</h1>
           <br>
-          <button id="B9" type="button" class="btn btn-primary">View all the items</button>
-          <button id="B10" type="button" class="btn btn-primary">Sort by price</button>
+          <button id="B9" type="button" class="btn btn-primary">ALL THE ITEMS</button>
+          <button id="B10" type="button" class="btn btn-primary">SORT BY PRICE</button>
           <br>
           <br>
           <iframe id="airtable-embed2" style="display: none" src="https://airtable.com/embed/shrMyWd1VUzmo0jVn?backgroundColor=gray&amp;viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533"></iframe> <br>
