--- a/stores.html
+++ b/stores.html
@@ -127,22 +127,27 @@
         <div class="col-md-12">
           <h1 class="mb-3">Find where you can get your items and check the opening time !</h1>
           <br>
-          <button id="B3" type="button" class="btn btn-success">View as list</button>
-          <button id="B1" type="button" class="btn btn-danger">numbers of items</button>
-          <button id="B5" type="button" class="btn btn-info">average price spread</button>
+          <button id="B3" type="button" class="btn btn-success">STORES LIST</button>
+          <button id="B1" type="button" class="btn btn-danger">NUMBERS OF ITEMS</button>
+          <button id="B5" type="button" class="btn btn-info">AVERAGE PRICE SPREAD</button>
           <br>
           <br>
-          <iframe id="airtable-embed3" src="https://airtable.com/embed/shrAWgjsh91KY6rVM?backgroundColor=gray&amp;viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533" style="background: transparent; border: 1px solid #ccc;"></iframe>
           <iframe id="airtable-embed4" style="display: none" src="https://airtable.com/embed/shrpBXHnj5qVvPeSG?backgroundColor=gray&amp;viewControls=on" frameborder="0" onmousewheel="" width="100%" height="533"></iframe>
           <br>
           <br>
-          <div class="table-responsive">
-            <table id="example2" style="width:50%" class="table table-bordered"></table>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="table-responsive">
+                <table id="example2" style="width:100%" class="table table-bordered"></table>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="table-responsive">
+                <table id="example4" style="width:100%" class="table table-bordered"></table>
+              </div>
+            </div>
           </div>
           <div id="chart"></div>
-          <div class="table-responsive">
-            <table id="example4" style="width:50%" class="table table-bordered"></table>
-          </div>
           <div id="chart2"></div>
           <br>
           <br>
