--- a/brands.html
+++ b/brands.html
@@ -78,44 +78,60 @@
       </div>
       <div class="row">
         <div class="col-md-6 p-4">
-          <a href="brand01.html"> <h4> <b>Every Supreme Skate Deck &amp; Accessory Ever Made Showcased in New Exhibition</b>  </h4></a>
+          <a href="brand01.html">
+            <h4> <b>Every Supreme Skate Deck &amp; Accessory Ever Made Showcased in New Exhibition</b> </h4>
+          </a>
           <p>“Inferno” centers around two massive collections.</p>
           <p>Sep 12, 2018 / By Nicolaus Li</p>
         </div>
         <div class="col-md-6 p-4">
-          <a href="brand02.html"> <h4> <b>Koreatown Run Club Taps PLEASURES, Chinatown Market &amp; Carrots to Capture the Energy of LA</b> </h4></a>
+          <a href="brand02.html">
+            <h4> <b>Koreatown Run Club Taps PLEASURES, Chinatown Market &amp; Carrots to Capture the Energy of LA</b> </h4>
+          </a>
           <p>Building a new sense of community.</p>
           <p>Nov 28, 2018 / By Jake Silbert</p>
         </div>
         <div class="col-md-6 p-4">
-          <a href="brand03.html"> <h4> <b>Champion &amp; London Youth Reveal New Charity Capsule</b> </h4></a>
+          <a href="brand03.html">
+            <h4> <b>Champion &amp; London Youth Reveal New Charity Capsule</b> </h4>
+          </a>
           <p>Celebrating young Londoners.</p>
           <p>Nov 26, 2018 / By Jack Stanley</p>
         </div>
         <div class="col-md-6 p-4">
-          <a href="brand04.html"> <h4> <b>Anti Social Social Club Joins Honda for Ricer-Friendly Collaboration</b> </h4></a>
+          <a href="brand04.html">
+            <h4> <b>Anti Social Social Club Joins Honda for Ricer-Friendly Collaboration</b> </h4>
+          </a>
           <p>No VTEC logos to be found, however.</p>
           <p>Nov 2, 2018 / By Jake Silbert</p>
         </div>
       </div>
       <div class="row">
         <div class="col-md-6 p-4">
-          <a href="brand05.html"> <h4> <b>Palace x Polo Ralph Lauren's London Drop Had Fans Excited for Skate Decks &amp; Teddy Bears</b> </h4></a>
+          <a href="brand05.html">
+            <h4> <b>Palace x Polo Ralph Lauren's London Drop Had Fans Excited for Skate Decks &amp; Teddy Bears</b> </h4>
+          </a>
           <p>The unexpected collaboration finally hits stores.</p>
           <p>Nov 9, 2018 / By Jack Stanley</p>
         </div>
         <div class="col-md-6 p-4">
-          <a href="brand06.html"> <h4> <b>Uhh! LRG &amp; Master P Hook-Up for a No Limit Records Capsule</b> </h4></a>
+          <a href="brand06.html">
+            <h4> <b>Uhh! LRG &amp; Master P Hook-Up for a No Limit Records Capsule</b> </h4>
+          </a>
           <p>“If you’re sellin’ that ice cream, you gots to make sure it’s good.”</p>
           <p>14 Hrs ago / Presented by LRG</p>
         </div>
         <div class="col-md-6 p-4">
-          <a href="brand07.html"> <h4> <b>Take a First Look at Martine Rose's Nike Collaboration</b> </h4></a>
+          <a href="brand07.html">
+            <h4> <b>Take a First Look at Martine Rose's Nike Collaboration</b> </h4>
+          </a>
           <p>Dropping on Craigslist.</p>
           <p>16 Hrs ago / By Enrique Menendez</p>
         </div>
         <div class="col-md-6 p-4">
-          <a href="brand08.html"> <h4> <b>The North Face, visvim, Cav Empt &amp; More Appear on HAVEN's FW18 Editorial</b> </h4></a>
+          <a href="brand08.html">
+            <h4> <b>The North Face, visvim, Cav Empt &amp; More Appear on HAVEN's FW18 Editorial</b> </h4>
+          </a>
           <p>Alongside Kapital, Mountain Research and more.</p>
           <p>Nov 30, 2018 / By Felson Sajonas</p>
         </div>
@@ -123,22 +139,6 @@
     </div>
   </div>
   <header class="masthead" style="background-image: url('img/items-bg.jpg')"></header>
-  <div class="text-center my-0 py-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12" style="">
-          <div class="row"></div><button id="B4" type="button" class="btn btn-success" contenteditable="true"><b>Average Selling Price</b></button>
-          <br>
-          <br>
-          <div class="table-responsive">
-            <table id="example3" style="width:50%" class="table table-bordered"></table>
-          </div>
-          <div id="chart">
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="bg-info p-0">
     <div class="container">
       <div class="row">
