--- a/contact.html
+++ b/contact.html
@@ -102,15 +102,6 @@
     </div>
   </div>
   <header class="masthead" style="background-image: url('img/items-bg.jpg')"></header>
-  <div class="py-2">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-center">
-          <h1 class="text-dark">Feel free to contact us !</h1>
-        </div>
-      </div>
-    </div>
-  </div>
   <div class="text-center py-2">
     <div class="container">
       <div class="row">
@@ -127,27 +118,7 @@
       <div class="row">
       </div>
       <div class="row justify-content-center">
-        <div class="col-6 p-4 col-md-6">
-          <form id="c_form-h" class="">
-            <div class="form-group row"> <label for="inputmailh" class="col-2 col-form-label">Name</label>
-              <div class="col-10">
-                <input type="email" class="form-control" id="inputmailh" placeholder="Name"> </div>
-            </div>
-            <div class="form-group row"> <label for="inputpasswordh" class="col-2 col-form-label">Age</label>
-              <div class="col-10">
-                <input type="password" class="form-control" id="inputpasswordh" placeholder="Age"> </div>
-            </div>
-            <div class="form-group row"> <label for="inputmailh" class="col-2 col-form-label">E-mail</label>
-              <div class="col-10">
-                <input type="email" class="form-control" id="inputmailh" placeholder="mail@example.com"> </div>
-            </div>
-            <div class="form-group row"> <label for="inputpasswordh" class="col-2 col-form-label">Feedback</label>
-              <div class="col-10">
-                <input type="password" class="form-control" id="inputpasswordh" placeholder="Feedback"> </div>
-            </div>
-          </form>
-          <button type="submit" class="btn btn-warning" contenteditable="true"><b>Submit</b></button>
-        </div>
+        <script src="https://static.airtable.com/js/embed/embed_snippet_v1.js"></script><iframe class="airtable-embed airtable-dynamic-height" src="https://airtable.com/embed/shroHF1mGOc0Se2NE?backgroundColor=red" frameborder="0" onmousewheel="" style="width:50%" height="874" style="background: transparent; border: 1px solid #ccc;"></iframe>
       </div>
     </div>
   </div>
