--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="col-md-4 p-4"> <i class="d-block fa fa-3x mb-2 text-muted fa-hand-peace-o"></i>
           <h4 class="bg-warning"> <b>Hottest Items</b></h4>
           <p>We collect all the hottest items from different famous stores in HK. And we have also compared the prices of the same item in different stores, so that you can know where to buy your favorite clothes for less money.</p>
-          <a id=tagitems class="btn btn-outline-dark" href="landing.html">CHECK THE ITEMS</a>
+          <a id="tagitems" class="btn btn-outline-dark" href="landing.html">CHECK THE ITEMS</a>
         </div>
         <div class="col-md-4 col-6 p-4"> <i class="d-block fa fa-stop-circle-o fa-3x mb-2 text-muted"></i>
           <h4 class="bg-warning"> <b>Brands</b></h4>
@@ -124,6 +124,16 @@
           <h4 class="bg-warning"> <b>Stores</b></h4>
           <p>There are many stores in HK that you can choose. Different stores have different prices.<br>Find where you can get your items and check the opening time in this page!</p>
           <a class="btn btn-outline-dark" href="stores.html">FIND THEM IN THE MAP</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="bg-warning py-0">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 p-2">
+          <h5 class="text-center"> <b>About</b> </h5>
+          <p class="mb-0 text-center">This is a student program&nbsp;for the course COM5961 of the New Media Programme of the School of Journalism and Communication, CUHK.</p>
         </div>
       </div>
     </div>
