--- a/contact.html
+++ b/contact.html
@@ -128,6 +128,16 @@
       </div>
     </div>
   </div>
+  <div class="bg-warning py-0">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12 p-2">
+          <h5 class="text-center"> <b>About</b> </h5>
+          <p class="mb-0 text-center">This is a student program&nbsp;for the course COM5961 of the New Media Programme of the School of Journalism and Communication, CUHK.</p>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="py-3 bg-warning">
     <div class="container">
       <div class="row">
