--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
   <!-- End Google Tag Manager -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-129094912-1"></script>
-  <style>
-    .async-hide {
-      opacity: 0 !important
-    }
-  </style>
+  <style>.async-hide { opacity: 0 !important} </style>
   <script>(function(a,s,y,n,c,h,i,d,e){s.className+=' '+y;h.start=1*new Date;
   h.end=i=function(){s.className=s.className.replace(RegExp(' ?'+y),'')};
   (a[n]=a[n]||[]).hide=h;setTimeout(function(){i();h.end=null},c);h.timeout=c;
@@ -24,7 +20,7 @@
   <script> window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config','UA-129094912-1',{'optimize_id':'GTM-PJFD8HV'});    
+    gtag('config','UA-129094912-1',{'optimize_id':'GTM-PJFD8HV'});
     ga('require', 'GTM-PJFD8HV');
     //gtag('config', 'UA-129094912-1');
   </script>
