--- a/index.html
+++ b/index.html
@@ -294,69 +294,6 @@
 							<div id="container4" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 						</div>
 					</div>
-					<div class="col-lg-10">
-						<div class="single-showcase-box">
-						<table class="table">
-						<thead>
-							<tr>
-								<th scope="col"></th>
-								<th scope="col">Our Product</th>
-								<th scope="col">Elderly monitoring watch</th>
-								<th scope="col">Other Elderly Monitoring watch</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<th scope="row">Automated alert generation</th>
-								<td>Yes</td>
-								<td>No</td>
-								<td>No</td>
-							</tr>
-							<tr>
-								<th scope="row">Integration with Internet of Thing (IoT) E.g. Blood preesure monitor</th>
-								<td>Yes</td>
-								<td>No</td>
-								<td>No</td>
-							</tr>
-							<tr>
-								<th scope="row">Send health data report to clinic appointed by user</th>
-								<td>Yes</td>
-								<td>No</td>
-								<td>No</td>
-							</tr>
-							<tr>
-								<th scope="row">heart rate monitoring</th>
-								<td>Yes</td>
-								<td>No</td>
-								<td>No</td>
-							</tr>
-							<tr>
-								<th scope="row">Emergency call</th>
-								<td>yes (Support by smart devices)</td>
-								<td>Yes, Link service through the directly operated 24-hour Call and Care Service Centre</td>
-								<td>Yes</td>
-							</tr>
-							<tr>
-								<th scope="row">GPS locate</th>
-								<td>Yes(Supported by smart devices)</td>
-								<td>No</td>
-								<td>No</td>
-							</tr>
-							<tr>
-								<th scope="row">Call function</th>
-								<td>Yes(Supported by smart devices)</td>
-								<td>No</td>
-								<td>No</td>
-							</tr>
-							<tr>
-								<th scope="row">Danger zone alert</th>
-								<td>Yes(Supported by smart devices)</td>
-								<td>Yes</td>
-								<td>No</td>
-							</tr>
-						</tbody>
-						</table>
-						</div>
 					</div>
 				</div>
 			</div>
@@ -377,6 +314,76 @@
 		 <div class="row justify-content-center">
 			 <div class="col-lg-9">
 					 <ul id="faq-list">
+
+						 <li>
+							 <a data-toggle="collapse" class="collapsed" href="#faq1">Why Care-IT?<i class="fa fa-minus-circle"></i></a>
+							 <div id="faq1" class="collapse" data-parent="#faq-list">
+								 <p>The below table address our advantages.</p>
+								 <div class="col-lg-10">
+							 		<div class="single-showcase-box">
+							 		<table class="table">
+							 		<thead>
+							 			<tr>
+							 				<th scope="col"></th>
+							 				<th scope="col">Our Product</th>
+							 				<th scope="col">Elderly monitoring watch</th>
+							 				<th scope="col">Other Elderly Monitoring watch</th>
+							 			</tr>
+							 		</thead>
+							 		<tbody>
+							 			<tr>
+							 				<th scope="row">Automated alert generation</th>
+							 				<td>Yes</td>
+							 				<td>No</td>
+							 				<td>No</td>
+							 			</tr>
+							 			<tr>
+							 				<th scope="row">Integration with Internet of Thing (IoT) E.g. Blood preesure monitor</th>
+							 				<td>Yes</td>
+							 				<td>No</td>
+							 				<td>No</td>
+							 			</tr>
+							 			<tr>
+							 				<th scope="row">Send health data report to clinic appointed by user</th>
+							 				<td>Yes</td>
+							 				<td>No</td>
+							 				<td>No</td>
+							 			</tr>
+							 			<tr>
+							 				<th scope="row">heart rate monitoring</th>
+							 				<td>Yes</td>
+							 				<td>No</td>
+							 				<td>No</td>
+							 			</tr>
+							 			<tr>
+							 				<th scope="row">Emergency call</th>
+							 				<td>yes (Support by smart devices)</td>
+							 				<td>Yes, Link service through the directly operated 24-hour Call and Care Service Centre</td>
+							 				<td>Yes</td>
+							 			</tr>
+							 			<tr>
+							 				<th scope="row">GPS locate</th>
+							 				<td>Yes(Supported by smart devices)</td>
+							 				<td>No</td>
+							 				<td>No</td>
+							 			</tr>
+							 			<tr>
+							 				<th scope="row">Call function</th>
+							 				<td>Yes(Supported by smart devices)</td>
+							 				<td>No</td>
+							 				<td>No</td>
+							 			</tr>
+							 			<tr>
+							 				<th scope="row">Danger zone alert</th>
+							 				<td>Yes(Supported by smart devices)</td>
+							 				<td>Yes</td>
+							 				<td>No</td>
+							 			</tr>
+							 		</tbody>
+							 		</table>
+							 		</div>
+							 </div>
+						 </li>
 
 						 <li>
 							 <a data-toggle="collapse" class="collapsed" href="#faq1">Can I use Care-IT?<i class="fa fa-minus-circle"></i></a>
