--- a/index.html
+++ b/index.html
@@ -434,6 +434,13 @@
 					     </div>
 						 </li>
 						 <li>
+							 <a data-toggle="collapse" href="#faq7" class="collapsed">Is the analysis accurate?<i class="fa fa-minus-circle"></i></a>
+							 <div id="faq7" class="collapse" data-parent="#faq-list">
+							 <p>Profile will be generated according to users’ data. Machine learning, clustering and classification techniques will be used for further training for the model. The longer you use the application, more data could be collected and analysed. You could also input your medical history to have a more precise result.
+Environmental factors, such as temperature and humidity, would be also taken into account. Seasonality will also be take into account. For example, cardiovascular disease would be easier to be triggered in winter which is proved by various academic study worldwide. </p>
+							 </div>
+						 </li>
+						 <li>
 						   <a data-toggle="collapse" href="#faq8" class="collapsed">Why do you have two options for siblings to contact their parents?<i class="fa fa-minus-circle"></i></a>
 						   <div id="faq8" class="collapse" data-parent="#faq-list">
 						   <p>The video call function can only be activated when a camera is installed at home. Users can choose whether to install it or not. </p>
