--- a/index.html
+++ b/index.html
@@ -428,12 +428,6 @@
 							 </div>
 						 </li>
 						 <li>
-						   <a data-toggle="collapse" href="#faq7" class="collapsed">How to contact you?<i class="fa fa-minus-circle"></i></a>
-						   <div id="faq7" class="collapse" data-parent="#faq-list">
-						   <p>Please contact us by phone (+852) 9880 6704 or by Email: Care.IT.hk@gmail.com for any question </p>
-					     </div>
-						 </li>
-						 <li>
 							 <a data-toggle="collapse" href="#faq8" class="collapsed">Is the analysis accurate?<i class="fa fa-minus-circle"></i></a>
 							 <div id="faq8" class="collapse" data-parent="#faq-list">
 							 <p>Profile will be generated according to users’ data. Machine learning, clustering and classification techniques will be used for further training for the model. The longer you use the application, more data could be collected and analysed. You could also input your medical history to have a more precise result.
@@ -448,6 +442,11 @@ Environmental factors, such as temperature and humidity, would be also taken int
 						 </li>
 					 </ul>
 			 </div>
+		 </div>
+
+		 <div>
+			 <br>
+			 <h4 style="text-align: center;">Contact: (+852) 9880 6704</h4>
 		 </div>
 
 	 </div>
