--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ Environmental factors, such as temperature and humidity, would be also taken int
 
 		 <div>
 			 <br>
-			 <h4 style="text-align: center;">Contact: (+852) 9880 6704</h4>
+			 <h4 style="text-align: center;">Contact us : (+852)9880 6704</h4>
 		 </div>
 
 	 </div>
