--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 			<div class="colorlib-footer">
 				<p><small>&copy; <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | 此网页模板修改 <i class="icon-heart" aria-hidden="true"></i> 自 <a href="https://colorlib.com" target="_blank">Colorlib</a>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <br>此网页模板修改自 <a href="https://colorlib.com" target="_blank">Colorlib</a>
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --> </span></small></p>
 				<ul>
 					<li><a href="https://www.instagram.com/ggbb22/"><i class="icon-instagram"></i></a></li>
@@ -555,7 +555,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 							</div>
 						</div>
-					
+
 
 					</div>
 
