--- a/index.html
+++ b/index.html
@@ -320,8 +320,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 
 					               <div class="timeline-label">
 													 <h2><a href="#">线上作者；公众号运营/网易沸点工作室</a> <span>2017年7月-至今</span></h2>
-													 <p>共撰写了30余篇文章，其中十余篇阅读量10万+</p>
-													 <p>发文公众号：《槽值》/《网易公开课》/《谈心社》/《网易新闻》/《哒哒》</p>
+													 <p>共撰写了30余篇文章，其中十余篇阅读量10万+
+													 <br>1个月运营公众号《哒哒》的经验，主要负责寻找合适转载文章，后台内容排版编辑等
+													 <br>发文公众号：《槽值》/《网易公开课》/《谈心社》/《网易新闻》/《哒哒》</p>
 					               </div>
 					            </div>
 					         </article>
@@ -334,8 +335,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 					               <div class="timeline-label">
 													 <h2><a href="#">媒介策划实习生/IPG Mediabrands - Universal McCann</a> <span>2017年7月-2017年9月</span></h2>
-													 <p>为客户抓取和处理市场和用户数据，分析与制定广告媒介投放策略</p>
-													 <p>客户： 嘉士伯、乐高、全棉时代</p>
+													 <p>关注广告投放环境趋势，分析同行竞争者动态，抓取和处理目标用户数据，为特定用户制定广告媒介投放策略，制定出周报/月报/季报/年报
+														 <br>收集市场分析报告，使用数据分析软件，参考以往案例，跟进广发银行全国广场舞大赛，协助策划部门主管制定广告策划和媒体投放方案</p>
+
 													</div>
 					            </div>
 					         </article>
@@ -347,7 +349,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 					               <div class="timeline-label">
 													 <h2><a href="#">企业新媒体营销案例研究/大学生创新创业项目-国家级</a> <span>2015年5月 - 2018年5月</span></h2>
-													 <p>针对传统企业向新媒体转型进行调查研究，整合为研究案例发布至国内国外案例库</p>
+													 <p>针对传统企业向新媒体转型进行企业调查研究，整合为研究案例发布至国内国外案例库
+													 <br>收集和整理关于数字赋能的学术论文和案例材料，为项目导师撰写的数字赋能学术论文提供支持，该论文后被收录与International Digital Enablement Conference</p>
 												</div>
 					            </div>
 					         </article>
@@ -359,7 +362,9 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 					               <div class="timeline-label">
 													 <h2><a href="#">新媒体营销教材项目/大学生创新创业项目-学校级</a> <span>2015年9月 - 2018年5月</span></h2>
-														 <p>协助编写书籍《新媒体营销：网络营销新视角》（已出版，在售）</p>
+														 <p>系统并深度学习新媒体营销有关80余本书籍和100余篇心理学学术论文
+															 <br>收集和整理国内外新媒体营销的经典案例，并撰写为短篇和长篇的阅读材料
+															 <br>协助编写书籍《新媒体营销：网络营销新视角》（已出版，在售）</p>
 												 </div>
 					            </div>
 					         </article>
