--- a/index.html
+++ b/index.html
@@ -116,11 +116,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					   				<div class="slider-text-inner">
 					   					<div class="desc">
 						   					<h1>我是...</h1>
-												<h2>篮球爱好者
-													<br>网易公号推文写手
-													<br>网页开发与维护的热血新手
-													<br>热衷于图像设计与视频制作
-													<br>沉溺于自学各类知识与技能</h2>
+												<h2>网易公众号推文资深写手
+													<br>互联网产品重度依赖用户
+													<br>热衷图像设计与视频制作
+													<br>爱好自学各类知识与技能</h2>
 											</div>
 					   				</div>
 					   			</div>
@@ -144,7 +143,12 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 											<br>我是一名来自香港中文大学的新媒体专业研究生，本科主修市场营销。我对市场调研、数据分析、营销策划、广告媒体、基础开发和后台运维有一定的认识和见解。</p>
 										<p>我兴趣爱好广泛，喜欢电影音乐、篮球跑步、摄影旅行、唱歌绘画、电子游戏等等。</p>
 										<p>我热爱互联网和社交媒体，对层出不穷的新兴产品充满好奇。
-										<br>在研究生课程和校外比赛中，我曾独立或与团队创立、跟进和管理过几个创新创业项目。其中包括了“香港潮牌买手店实时库存和比价平台”、“香港家人身体状况实时监测和智能警报平台”、“香港数字营销在线授课平台”、“香港养狗人一站式服务平台”。</p>
+										<br>在研究生课程和校外比赛中，我曾独立或与团队创立、跟进和管理过几个创新创业项目:
+										<br>1. “香港潮牌买手店实时库存和比价平台” - 解决潮牌爱好者面对潮牌买手店“胡乱提升价格”/“尺寸颜色型号不清楚”/“同质性太高”等问题的痛点，促进潮牌买手市场的健康运行
+										<br>2. “香港家人身体状况实时监测和智能警报平台” - 减缓独居老人突发病痛无人知晓的社会问题
+										<br>3. “香港数字营销在线授课平台” - 针对“香港数字营销发展落后，传统行业亟需转型，数字营销人才需求大”等社会现状，开启香港数字营销知识付费先河
+										<br>4. “香港养狗人一站式服务平台” - 解决养宠人“有效养宠信息无处获取，养宠活动无处寻觅，养宠健康无法得到即时保障”等问题
+										</p>
 									</div>
 								</div>
 							</div>
@@ -313,6 +317,27 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					<div class="row">
 						<div class="col-md-12">
 				         <div class="timeline-centered">
+
+									 <article class="timeline-entry animate-box" data-animate-effect="fadeInRight">
+					            <div class="timeline-entry-inner">
+					               <div class="timeline-icon color-2">
+					                  <i class="icon-pen2"></i>
+					               </div>
+					               <div class="timeline-label">
+													 <h2><a href="#">整合营销实习生/腾讯PCG社交平台市场中心</a> <span>2019年5月-至今</span></h2>
+													 <p>— 负责QQ新国风项目，与10位国内外新锐艺术家沟通，顺利达成零成本资源置换的合作形式；同时，多客户及多部门沟通与对接需求，确保项目于9月中在线上QQ个性化上线，在线下京港地铁上刊
+														 <br>— 参与QQ有嘿话系列项目，包括：
+														 <br>· 00后语言文化调研项目--跟进提案比稿、策略调研、结果输出的全过程
+														 <br>· QQx雅诗兰黛/QQx麦当劳项目--负责创意提案、沟通与沉淀需求等工作
+														 <br>· 00后热词词典出版项目--负责筛选出版社、对接需求等工作，达成零成本出版的合作
+														 <br>— 参与QQx安踏 20周年联名项目，负责创意提案、联名产品设计全过程对接等工作
+														 <br>— 公司级营销通道M3-2及以上晋升面试评审小组助理
+														 </p>
+
+													</div>
+					            </div>
+					         </article>
+
 					         <article class="timeline-entry animate-box" data-animate-effect="fadeInLeft">
 					            <div class="timeline-entry-inner">
 
@@ -321,10 +346,11 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 
 					               <div class="timeline-label">
-													 <h2><a href="#">线上作者；公众号运营/网易沸点工作室</a> <span>2017年7月-至今</span></h2>
-													 <p>共撰写了30余篇文章，其中十余篇阅读量10万+
-													 <br>1个月运营公众号《哒哒》的经验，主要负责寻找合适转载文章，后台内容排版编辑等
-													 <br>发文公众号：《槽值》/《网易公开课》/《谈心社》/《网易新闻》/《哒哒》</p>
+													 <h2><a href="#">线上作者；公众号运营/网易沸点工作室</a> <span>2017年7月-2019年4月</span></h2>
+													 <p>— 在校期间共撰写了30余篇文章，其中十余篇阅读量10万+，所上交的稿件作为提交规范模板在作者群传阅
+														 <br>— 1个月运营公众号《网易哒哒》的经验，每日关注公众号排名并阅读大量新榜热门文章，负责根据转型定位进行合作转载和用户关系管理工作
+														 <br>— 发文公众号为盛产爆款H5的《网易哒哒》、《网易新闻》及中国微信100强公众号：《槽值》、《网易公开课》、《谈心社》共撰写了30余篇文章，其中十余篇阅读量10万+
+												</p>
 					               </div>
 					            </div>
 					         </article>
@@ -337,8 +363,10 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 					               <div class="timeline-label">
 													 <h2><a href="#">媒介策划实习生/IPG Mediabrands - Universal McCann</a> <span>2017年7月-2017年9月</span></h2>
-													 <p>关注广告投放环境趋势，分析同行竞争者动态，抓取和处理目标用户数据，为特定用户制定广告媒介投放策略，制定出周报/月报/季报/年报
-														 <br>收集市场分析报告，使用数据分析软件，参考以往案例，跟进广发银行全国广场舞大赛，协助策划部门主管制定广告策划和媒体投放方案</p>
+													 <p>— 研读市场研究报告，分析广告投放环境与同行竞争者动态，抓取和处理目标用户数据，为特定客户制定广告策划和媒介投放策略
+														 <br>— 跟进2017年广发银行“自在卡杯”全国广场舞大赛，负责赛事电视投放策划工作
+														 <br>— 自发地重新整理实习生数据软件学习指南，大幅提升入职实习生软件上手效率关注广告投放环境趋势，分析同行竞争者动态，抓取和处理目标用户数据，为特定用户制定广告媒介投放策略，制定出周报/月报/季报/年报
+														</p>
 
 													</div>
 					            </div>
@@ -351,7 +379,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 					               <div class="timeline-label">
 													 <h2><a href="#">企业新媒体营销案例研究/大学生创新创业项目-国家级</a> <span>2015年5月 - 2018年5月</span></h2>
-													 <p>针对传统企业向新媒体转型进行企业调查研究，整合为研究案例发布至国内国外案例库
+													 <p>针对传统企业向新媒体转型进行企业调查研究，整合为研究案例发布至国际著名的DEP案例库
 													 <br>收集和整理关于数字赋能的学术论文和案例材料，为项目导师撰写的数字赋能学术论文提供支持，该论文后被收录与International Digital Enablement Conference</p>
 												</div>
 					            </div>
@@ -364,8 +392,8 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 					               </div>
 					               <div class="timeline-label">
 													 <h2><a href="#">新媒体营销教材项目/大学生创新创业项目-学校级</a> <span>2015年9月 - 2018年5月</span></h2>
-														 <p>系统并深度学习新媒体营销有关80余本书籍和100余篇心理学学术论文
-															 <br>收集和整理国内外新媒体营销的经典案例，并撰写为短篇和长篇的阅读材料
+														 <p>5个月在校时间深度并系统学习新媒体营销有关80余本书籍和100余篇心理学学术论文
+															 <br>收集和整理国内外新媒体营销的经典案例，并撰写为短篇和长篇的阅读材料，用作书籍内容
 															 <br>协助编写书籍《新媒体营销：网络营销新视角》（已出版，在售）</p>
 												 </div>
 					            </div>
@@ -608,7 +636,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
 								</div>
 								<div class="colorlib-text">
 									<p>电话
-										<br>+852 64492826（常用）
+
 									<br>15172525341
 								</p>
 								</div>
